res/examples/valid/if_expression_assign.eg
let a = if (true) { 123 };